--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -1,7 +1,6 @@
 footer{
-    height: 100px;
-    background: $secondary-color;
+    height: 356px;
+    background-color: $bg-body;
     margin-top: auto;
-}
 
- 
+}
