--- a/dev/templates/footer.html
+++ b/dev/templates/footer.html
@@ -1,6 +1,3 @@
-<footer>
-	Footer
+<footer
 </footer>
-<script async src="assets/js/custom.js"></script>
-</body>
-</html>
+<a href="ul-kit.html " style="position: fixed; left: 25px; bottom: 25px;">markap</a>
