--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -7,13 +7,15 @@
 
 
 body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+
   .body {
     background-color: $bg-body;
     color: $color;
     font-family: "ProximaNova";
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+
   }
 
 
@@ -119,3 +121,6 @@ ul {
 
 }
 
+.container {
+  max-width: 1140px !important;
+}
