--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -1,8 +1,31 @@
-header{
+
+
+header {
 	height: 114px ;
 	padding: 15px 0;
 	background: $bg-body;
 	a {
 		color: #fff;
 	}
+}
+
+.navbar-custom {
+	padding: 9px 0 39px !important;
+}
+
+.navbar-custom {
+	.nav-item {
+		.nav-link {
+			padding: 8px 25px !important;
+			&:hover {
+				text-decoration: none;
+				color: $primary-color  !important;
+			}
+		}
+	}
+}
+
+
+.navbar-brand {
+	 margin: 0 !important;
 }
