--- a/dev/templates/head.html
+++ b/dev/templates/head.html
@@ -5,9 +5,8 @@
     <meta name="theme-color" content="#188de7">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <title>Сборка Markup</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <script async src="assets/js/main.js"></script>
