--- a/dev/templates/header.html
+++ b/dev/templates/header.html
@@ -1,7 +1,6 @@
 <header>
   <div class="container">
-      <nav class="navbar navbar-expand-lg ">
-          <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-custom">
             <a class="navbar-brand" href="index.html"><img src="../assets/Img/logo.svg" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -23,7 +22,7 @@
                   <a class=" nav-link text-white   active" aria-current="page" href="#">Контакты
                   </a>
                 </li>
-                <li class="nav-item"></li>
+                <li class="nav-item">
                   <a class=" nav-link text-white   active" aria-current="page" href="#">Оформить груз
                   </a>
                 </li>
@@ -32,7 +31,6 @@
               </ul>
                <button class="btn btn-primary">Оставить Заявку</button>
             </div>
-          </div>
         </nav>
 
   </div>
