--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -124,3 +124,85 @@ ul {
 .container {
   max-width: 1140px !important;
 }
+
+
+
+.navbar-custom {
+  padding: 3px 0 20px !important;
+
+}
+
+.navbar-toggler {
+  border: none !important;
+  border-radius: 0 !important;
+  padding: 0 !important;
+  box-shadow: none !important;
+
+
+
+  .navbar-toggler-icon {
+    background-image: none !important;
+    background: #fff;
+    height: 2px !important;
+    position: relative;
+
+
+    &:before,
+    &::after{
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 10px;
+      width: 100%;
+      height: 2px;
+      background: #fff;
+      transition: .3s !important;
+
+    }
+
+    &::after {
+      top: 18px !important;
+    }
+
+
+
+
+  }
+
+}
+
+[aria-expanded="true"] {
+   .navbar-toggler-icon {
+    background-color: transparent !important;
+    &::before {
+      transform: rotate(45deg) !important;
+    }
+
+    &::after {
+      transform:  rotate(-45deg) !important;
+      top: 9px !important;
+    }
+   }
+}
+
+
+
+
+.navbar-custom {
+.nav-item {
+  .nav-link {
+    padding: 12px 16px !important;
+    &:hover {
+      text-decoration: none;
+      color: $primary-color  !important;
+    }
+  }
+}
+
+.navbar-nav {
+  margin-top: 3px !important;
+}
+
+
+
+}
