--- a/dev/templates/header.html
+++ b/dev/templates/header.html
@@ -6,30 +6,31 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                  <a class=" nav-link text-white   active" aria-current="page" href="#">Цены и сроки</a>
-                </li>
+                <ul class="navbar-nav mx-auto">
+                  <li class="nav-item">
+                    <a class=" nav-link text-white   active" aria-current="page" href="#">Цены и сроки</a>
+                  </li>
 
-                <li class="nav-item">
-                  <a class=" nav-link text-white   active" aria-current="page" href="#">Услуги</a>
-                </li>
+                  <li class="nav-item">
+                    <a class=" nav-link text-white   active" aria-current="page" href="#">Услуги</a>
+                  </li>
 
-                <li class="nav-item">
-                  <a class=" nav-link text-white" href="#">О компании</a>
-                </li>
-                <li class="nav-item">
-                  <a class=" nav-link text-white   active" aria-current="page" href="#">Контакты
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class=" nav-link text-white   active" aria-current="page" href="#">Оформить груз
-                  </a>
-                </li>
+                  <li class="nav-item">
+                    <a class=" nav-link text-white" href="#">О компании</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" nav-link text-white   active" aria-current="page" href="#">Контакты
+                    </a>
+                  </li>
+                  <li class="nav-item nav-item-two">
+                    <a class=" nav-link text-white   active" aria-current="page" href="#">Оформить груз
+                    </a>
+                  </li>
 
 
-              </ul>
-               <button class="btn btn-primary">Оставить Заявку</button>
+                </ul>
+                <button class="btn btn-primary">Оставить Заявку</button>
+
             </div>
         </nav>
 
