--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -84,15 +84,19 @@ ul {
 
     &:hover {
       background-color: transparent !important;
-      transition: .3s !important;
+      transition: .5s !important;
+
     }
   }
 
   &.btn-secondary {
     background-color: transparent !important;
 
+
     &:hover {
       background-color: $primary-color !important;
+      transition: .3s !important;
+
 
 
     }
@@ -104,6 +108,7 @@ ul {
     &:active {
       background-color: $secondary-color !important;
       border-color: $secondary-color !important;
+       transition: .3s !important;
     }
   }
 
@@ -116,93 +121,65 @@ ul {
   &.btn-lg {
     padding: 19px 24px !important;
     font-size: 16px !important;
+
   }
-
-
 }
 
-.container {
-  max-width: 1140px !important;
-}
+.template-title {
+  text-align: center;
+  position: relative;
+  padding-bottom: 48px;
 
-
-
-.navbar-custom {
-  padding: 3px 0 20px !important;
-
-}
-
-.navbar-toggler {
-  border: none !important;
-  border-radius: 0 !important;
-  padding: 0 !important;
-  box-shadow: none !important;
-
-
-
-  .navbar-toggler-icon {
-    background-image: none !important;
-    background: #fff;
-    height: 2px !important;
-    position: relative;
-
-
-    &:before,
-    &::after{
+  &::before {
       content: "";
       position: absolute;
-      left: 0;
-      top: 10px;
-      width: 100%;
+      left: 50%;
+      transform: translate(-50%);
       height: 2px;
-      background: #fff;
-      transition: .3s !important;
-
-    }
-
-    &::after {
-      top: 18px !important;
-    }
-
-
-
-
+      bottom: 33px;
+      width: 85px;
+      background: $secondary-color;
   }
 
-}
+  h2 {
+    font-size: 36px;
+    line-height: 125%;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 6px;
+  }
 
-[aria-expanded="true"] {
-   .navbar-toggler-icon {
-    background-color: transparent !important;
+  h4 {
+    font-weight: 400;
+    font-size: 24px;
+  }
+
+  &.case-2 {
+    text-align: left !important;
+
     &::before {
-      transform: rotate(45deg) !important;
-    }
-
-    &::after {
-      transform:  rotate(-45deg) !important;
-      top: 9px !important;
-    }
-   }
-}
-
-
-
-
-.navbar-custom {
-.nav-item {
-  .nav-link {
-    padding: 12px 16px !important;
-    &:hover {
-      text-decoration: none;
-      color: $primary-color  !important;
+      left: 0 ;
+      transform: none;
     }
   }
-}
 
-.navbar-nav {
-  margin-top: 3px !important;
-}
+  &.case-3 {
+    max-width: 626px;
+    text-align: left;
 
+    &::before {
+      display: none;
+    }
 
-
+    h2 {
+      &::after {
+        content: "";
+        width: 85px;
+        height: 2px;
+        display: inline-block;
+        background-color: $secondary-color;
+        margin: 0 12px 10px;
+      }
+    }
+  }
 }
