--- a/dev/templates/head.html
+++ b/dev/templates/head.html
@@ -7,8 +7,10 @@
     <title>Сборка Markup</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 </head>
 
 <script async src="assets/js/main.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/swiper-bundle.min.js"></script>
 <body>
