--- a/dev/templates/header.html
+++ b/dev/templates/header.html
@@ -6,7 +6,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto">
+                <ul class="navbar-nav mt-0 mx-auto">
                   <li class="nav-item">
                     <a class=" nav-link text-white   active" aria-current="page" href="#">Цены и сроки</a>
                   </li>
