--- a/dev/sass/banner.scss
+++ b/dev/sass/banner.scss
@@ -1,6 +1,6 @@
 .banner {
   background: $bg-body;
-
+  font-family: "ProximaNova";
   .swiper {
     .container {
       min-height: 700px !important;
