--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -10,3 +10,9 @@ $bg-section: #363A4D;
 $color: #fff;
 $color-secondary: #85899C;
 $color-swiper: #89C249;
+$form-bg: #363A4D;
+$input-placeholeder: #CBCBCB;
+$checkbox-border: #282B38;
+
+$section-padding: 90px 0 100px;
+$section-padding-mobile: 54px 0 60px;
