--- a/dev/sass/media/_media_min_width992.scss
+++ b/dev/sass/media/_media_min_width992.scss
@@ -9,6 +9,42 @@
     }
   }
 
-  
+  .btn-lg {
+    padding: 19px 24px !important;
+    font-size: 16px !important;
+  }
+
+  .template-title {
+    &.case-2 {
+    text-align: left !important;
+
+    &::before {
+      left: 0 ;
+      transform: none;
+    }
+  }
+
+  &.case-3 {
+    max-width: 626px;
+    text-align: left;
+
+    &::before {
+      display: none;
+    }
+
+    h2 {
+      &::after {
+        content: "";
+        width: 85px;
+        height: 2px;
+        display: inline-block;
+        background-color: $secondary-color;
+        margin: 0 12px 10px;
+      }
+    }
+  }
+  }
+
+
 
 }
