--- a/dev/style.scss
+++ b/dev/style.scss
@@ -17,5 +17,9 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "sass/footer";
 @import "sass/media/media";
 @import "sass/global";
-@import "sass/fonts.scss";
-@import "sass/banner.scss";
+@import "sass/fonts";
+@import "sass/banner";
+@import "sass/calculation";
+@import "sass/advantages";
+
+
