--- a/dev/templates/advantages.html
+++ b/dev/templates/advantages.html
@@ -1,7 +1,8 @@
-<section class="advantages">
+<section class="advantages bg-section">
 	<div class="container">
 		<h2 class="template-title">Почему стоит выбрать именно нас?</h2>
 	</div>
 </section>
+
 
 
