--- a/dev/sass/media/_media_max_width990.scss
+++ b/dev/sass/media/_media_max_width990.scss
@@ -83,7 +83,18 @@
   }
 
   section {
-    padding: $section-padding-mobile;
+	  padding: $section-padding-mobile;
+
+
+	  &.bg-section {
+		  padding-left: 0;
+		  padding-right: 0;
+		  &:before {
+			  width: 100%;
+			  border-radius: 0;
+		  }
+	  }
+
   }
 
   .calculation-img {
