start section + icon + title

--- a/dev/templates/advantages.html
+++ b/dev/templates/advantages.html
@@ -1,6 +1,103 @@
 <section class="advantages bg-section">
 	<div class="container">
 		<h2 class="template-title">Почему стоит выбрать именно нас?</h2>
+		<div class="row">
+			<div class="col-md-3">
+				<div class="advantage">
+					<div class="advantages-img">
+						<img src="assets/Img/file-1.svg" alt="advantages">
+					</div>
+
+					<h6 class="advantage-title">
+						Таможенное оформление груза
+					</h6>
+				</div>
+			</div>
+
+
+
+
+
+			<div class="col-md-3">
+				<div class="advantage">
+					<div class="advantages-img">
+						<img src="assets/Img/file-2.svg" alt="advantages">
+					</div>
+
+					<h6 class="advantage-title">
+						Страховка груза
+					</h6>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="advantage">
+					<div class="advantages-img">
+						<img src="assets/Img/file-3.svg" alt="advantages">
+					</div>
+
+					<h6 class="advantage-title">
+						Проверка товара на брак
+					</h6>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="advantage">
+					<div class="advantages-img">
+						<img src="assets/Img/file-4.svg" alt="advantages">
+					</div>
+
+					<h6 class="advantage-title">
+						Доставка в любой город Украины
+					</h6>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="advantage">
+					<div class="advantages-img">
+						<img src="assets/Img/file-5.svg" alt="advantages">
+					</div>
+
+					<h6 class="advantage-title">
+						Консолидация на складе
+
+					</h6>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="advantage">
+					<div class="advantages-img">
+						<img src="assets/Img/file-6.svg" alt="advantages">
+					</div>
+
+					<h6 class="advantage-title">
+						Ответственное хранение груза
+
+					</h6>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="advantage">
+					<div class="advantages-img">
+						<img src="assets/Img/file-7.svg" alt="advantages">
+					</div>
+
+					<h6 class="advantage-title">
+						Помощь в оплате товара
+					</h6>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="advantage">
+					<div class="advantages-img">
+						<img src="assets/Img/file-8.svg" alt="advantages">
+					</div>
+
+					<h6 class="advantage-title">
+						Упаковка, переупаковка, паллетирование груза к международной перевозке
+					</h6>
+				</div>
+			</div>
+		</div>
 	</div>
 </section>
 
