advantages desktop, laptop version done

--- a/dev/sass/advantages.scss
+++ b/dev/sass/advantages.scss
@@ -1,12 +1,56 @@
 .advantages {
+
+	padding-bottom: 74px;
+
 	.template-title {
 		color: #fff;
+		padding-bottom: 51px;
+	}
 
-		&:hover {
+
+
+
+
+	.row {
+
+
+		.advantage {
+			width: 100%;
+			max-width: 263px;
+			text-align: center;
+			margin: 0 auto;
+			min-height: 201px;
+			margin-bottom: 26px;
+
+			.advantage-title {
+				color: #fff;
+				font-weight: 400;
+				font-size: 18px;
+				margin: 0;
+				line-height: 124%;
+			}
+
+			.advantages-img {
+				border: 1px solid #6C7188;
+				display: inline-block;
+				padding: 10px;
+				border-radius: 50%;
+				margin-bottom: 22px;
+
+				img {
+					background-color: $secondary-color;
+					width: 91px;
+					height: 91px;
+					object-fit: scale-down;
+					border-radius: 50%;
+				}
+			}
+
 
 		}
-
 	}
+
+
 
 
 
