--- a/dev/templates/advantages.html
+++ b/dev/templates/advantages.html
@@ -1,8 +1,10 @@
 <section class="advantages bg-section">
 	<div class="container">
-		<h2 class="template-title">Почему стоит выбрать именно нас?</h2>
+		<div class="template-title">
+			<h2>Почему стоит выбрать именно нас?</h2>
+		</div>
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-lg-3">
 				<div class="advantage">
 					<div class="advantages-img">
 						<img src="assets/Img/file-1.svg" alt="advantages">
@@ -18,7 +20,7 @@
 
 
 
-			<div class="col-md-3">
+			<div class="col-lg-3">
 				<div class="advantage">
 					<div class="advantages-img">
 						<img src="assets/Img/file-2.svg" alt="advantages">
@@ -29,7 +31,7 @@
 					</h6>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-lg-3">
 				<div class="advantage">
 					<div class="advantages-img">
 						<img src="assets/Img/file-3.svg" alt="advantages">
@@ -40,7 +42,7 @@
 					</h6>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-lg-3">
 				<div class="advantage">
 					<div class="advantages-img">
 						<img src="assets/Img/file-4.svg" alt="advantages">
@@ -51,7 +53,7 @@
 					</h6>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-lg-3">
 				<div class="advantage">
 					<div class="advantages-img">
 						<img src="assets/Img/file-5.svg" alt="advantages">
@@ -59,11 +61,10 @@
 
 					<h6 class="advantage-title">
 						Консолидация на складе
-
 					</h6>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-lg-3">
 				<div class="advantage">
 					<div class="advantages-img">
 						<img src="assets/Img/file-6.svg" alt="advantages">
@@ -75,7 +76,7 @@
 					</h6>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-lg-3">
 				<div class="advantage">
 					<div class="advantages-img">
 						<img src="assets/Img/file-7.svg" alt="advantages">
@@ -86,7 +87,7 @@
 					</h6>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-lg-3">
 				<div class="advantage">
 					<div class="advantages-img">
 						<img src="assets/Img/file-8.svg" alt="advantages">
