--- a/dev/templates/banner.html
+++ b/dev/templates/banner.html
@@ -1,5 +1,5 @@
 <section class="banner">
-<div class="swiper container-xxl">
+<div id="banner-swiper" class="swiper container-xxl">
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
