--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -196,3 +196,15 @@ section {
 
 }
 
+.swiper-pagination-bullet {
+	width: 8px;
+	height: 8px;
+	border: 2px solid #fff;
+	background-color: transparent;
+	opacity: 1;
+
+	&-active {
+		background-color: #fff !important;
+	}
+}
+
