--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -199,7 +199,7 @@ section {
 .swiper-pagination-bullet {
 	width: 8px;
 	height: 8px;
-	border: 2px solid #fff;
+	border: 2px solid #ffff;
 	background-color: transparent;
 	opacity: 1;
 
@@ -207,4 +207,3 @@ section {
 		background-color: #fff !important;
 	}
 }
-
