advantages mobile version done

--- a/dev/sass/advantages.scss
+++ b/dev/sass/advantages.scss
@@ -23,8 +23,10 @@
 				color: #fff;
 				font-weight: 400;
 				font-size: 18px;
-				margin: 0;
+				margin: 0 auto;
 				line-height: 124%;
+				max-width: 263px;
+
 			}
 
 			.advantages-img {
