--- a/dev/templates/advantages.html
+++ b/dev/templates/advantages.html
@@ -4,7 +4,6 @@
 			<h2>Почему стоит выбрать именно нас?</h2>
 		</div>
 		<div class="row">
-
 			<!-- Slider main container -->
 			<div id="advantages" class="swiper">
 				<!-- Additional required wrapper -->
@@ -12,87 +11,67 @@
 					<!-- Slides -->
 					<div class="advantage swiper-slide">
 						<div class="advantages-img">
-							<img src="assets/Img/file-1.svg" alt="advantages">
+							<img src="assets/Img/file-1.svg" alt="advantages" />
 						</div>
 
-						<h6 class="advantage-title">
-							Таможенное оформление груза
-						</h6>
+						<h6 class="advantage-title">Таможенное оформление груза</h6>
 					</div>
 					<div class="advantage swiper-slide">
-							<div class="advantages-img">
-							<img src="assets/Img/file-2.svg" alt="advantages">
+						<div class="advantages-img">
+							<img src="assets/Img/file-2.svg" alt="advantages" />
 						</div>
 
-						<h6 class="advantage-title">
-							Страховка груза
-						</h6>
+						<h6 class="advantage-title">Страховка груза</h6>
 					</div>
 					<div class="advantage swiper-slide">
-							<div class="advantages-img">
-							<img src="assets/Img/file-3.svg" alt="advantages">
+						<div class="advantages-img">
+							<img src="assets/Img/file-3.svg" alt="advantages" />
 						</div>
 
-						<h6 class="advantage-title">
-							Проверка товара на брак
-						</h6>
+						<h6 class="advantage-title">Проверка товара на брак</h6>
 					</div>
 					<div class="advantage swiper-slide">
-							<div class="advantages-img">
-							<img src="assets/Img/file-4.svg" alt="advantages">
+						<div class="advantages-img">
+							<img src="assets/Img/file-4.svg" alt="advantages" />
 						</div>
 
-						<h6 class="advantage-title">
-							Доставка в любой город Украины
-						</h6>
+						<h6 class="advantage-title">Доставка в любой город Украины</h6>
 					</div>
 					<div class="advantage swiper-slide">
-							<div class="advantages-img">
-							<img src="assets/Img/file-5.svg" alt="advantages">
+						<div class="advantages-img">
+							<img src="assets/Img/file-5.svg" alt="advantages" />
 						</div>
 
-						<h6 class="advantage-title">
-							Консолидация на складе
-						</h6>
+						<h6 class="advantage-title">Консолидация на складе</h6>
 					</div>
 					<div class="advantage swiper-slide">
-							<div class="advantages-img">
-							<img src="assets/Img/file-6.svg" alt="advantages">
+						<div class="advantages-img">
+							<img src="assets/Img/file-6.svg" alt="advantages" />
 						</div>
 
-						<h6 class="advantage-title">
-							Ответственное хранение груза
-						</h6>
+						<h6 class="advantage-title">Ответственное хранение груза</h6>
 					</div>
 					<div class="advantage swiper-slide">
-							<div class="advantages-img">
-							<img src="assets/Img/file-7.svg" alt="advantages">
+						<div class="advantages-img">
+							<img src="assets/Img/file-7.svg" alt="advantages" />
 						</div>
 
-						<h6 class="advantage-title">
-							Помощь в оплате товара
-
-						</h6>
+						<h6 class="advantage-title">Помощь в оплате товара</h6>
 					</div>
 					<div class="advantage swiper-slide">
-							<div class="advantages-img">
-							<img src="assets/Img/file-8.svg" alt="advantages">
+						<div class="advantages-img">
+							<img src="assets/Img/file-8.svg" alt="advantages" />
 						</div>
 
 						<h6 class="advantage-title">
-							Упаковка, переупаковка, паллетирование груза к международной перевозке
+							Упаковка, переупаковка, паллетирование груза к международной
+							перевозке
 						</h6>
 					</div>
-
-
-					...
 				</div>
 				<!-- If we need pagination -->
 				<div class="swiper-pagination"></div>
 			</div>
-
-
-
 		</div>
 	</div>
 </section>
