--- a/dev/sass/media/_media_max_width1199.scss
+++ b/dev/sass/media/_media_max_width1199.scss
@@ -1,3 +1,14 @@
+@media screen and (max-width: 1200px) {
+	.swiper-template{
+
+		+ .swiper-navigation {
+			max-width: 942px;
+		}
+	}
+
+}
+
+
 @media screen and (max-width: 1199.99px) {
   .navbar-custom {
     .nav-item {
