--- a/dev/sass/media/_media_max_width767.scss
+++ b/dev/sass/media/_media_max_width767.scss
@@ -1,4 +1,20 @@
+@media screen and (max-width: 861px) {
+	 .swiper-template {
+		 max-width: 360px;
+		 padding-bottom: 50px !important;
+
+		 .swiper-navigation {
+			 max-width: 552px;
+		 }
+
+	 }
+
+}
+
 @media screen and (max-width: 767px) {
+	.swiper-navigation {
+		display: none !important;
+	}
 
 
-  }
+}
