mobile version delivery fixed

--- a/dev/sass/media/_media_max_width1199.scss
+++ b/dev/sass/media/_media_max_width1199.scss
@@ -1,5 +1,7 @@
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1210px) {
 	.swiper-template{
+    max-width: 720px;
+
 
 		+ .swiper-navigation {
 			max-width: 942px;
