--- a/dev/style.scss
+++ b/dev/style.scss
@@ -22,6 +22,10 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "sass/calculation";
 @import "sass/advantages";
 @import "sass/delivery";
+@import "sass/services";
+@import "sass/description";
+
+
 
 
 
