--- a/dev/style.scss
+++ b/dev/style.scss
@@ -24,8 +24,4 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "sass/delivery";
 @import "sass/services";
 @import "sass/description";
-
-
-
-
-
+@import "sass/questions";
