--- a/dev/templates/calculation.html
+++ b/dev/templates/calculation.html
@@ -83,7 +83,8 @@
 				<div class="form-row">
 					<!-- Green wrapper -->
 					<div class="form-column">
-						<button class="btn btn-primary btn-lg">Следующий шаг<img src="assets/Img/Vector.svg" class="btn-img" alt="Vector"></button>
+						<button class="btn btn-primary btn-lg">Следующий шаг<img src="assets/Img/Vector.svg" class="btn-img"
+								alt="Vector"></button>
 					</div>
 				</div>
 			</form>
