--- a/dev/templates/description.html
+++ b/dev/templates/description.html
@@ -1,4 +1,4 @@
-<section class="list">
+<!-- <section class="list">
   <div class="container">
     <div class="template-title case-2">
       <h2>О компании</h2>
@@ -24,4 +24,4 @@
   </div>
 
 
-</section>
+</section> -->
