--- a/dev/templates/services.html
+++ b/dev/templates/services.html
@@ -11,23 +11,13 @@
         <div class="swiper-slide">
           <div class="card">
             <div class="img-box">
-              <img src="assets/Img/img-box-5.png" class="img-fluid" alt="img-box-1">
+              <img src="assets/Img/services-1.png" class="img-fluid" alt="img-box-1">
             </div>
             <h4 class="card-title">Авто - обычная </h4>
-
-            <ul class="card-option">
-              <li class="option-item"><img src="assets/Img/calendar.svg" alt="calendar">9-15 дней</li>
-              <li class="option-item"><img src="assets/Img/box.svg" alt="box">от 5 кг</li>
-            </ul>
-
-            <div class="card-price">
-              <span>от</span>
-              <b>2.5</b>
-              <span>$/кг</span>
-            </div>
-
+            <h6 class="card-description">Компания - это полный комплекс логистических услуг по доставке грузов из Китая
+              в Украину - сборные грузы
+              и цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Украина. </h6>
             <div class="btn-row">
-              <button class="btn btn-primary">Оставить Заявку</button>
               <button class="btn btn-secondary">Подробднее</button>
             </div>
           </div>
@@ -35,23 +25,13 @@
         <div class="swiper-slide">
           <div class="card">
             <div class="img-box">
-              <img src="assets/Img/img-box-4.png" class="img-fluid" alt="img-box-1">
+              <img src="assets/Img/services-2.png" class="img-fluid" alt="img-box-1">
             </div>
             <h4 class="card-title">Авто - ускоренная</h4>
-
-            <ul class="card-option">
-              <li class="option-item"><img src="assets/Img/calendar.svg" alt="calendar">9-15 дней</li>
-              <li class="option-item"><img src="assets/Img/box.svg" alt="box">от 5 кг</li>
-            </ul>
-
-            <div class="card-price">
-              <span>от</span>
-              <b>2.5</b>
-              <span>$/кг</span>
-            </div>
-
+            <h6 class="card-description">Компания - это полный комплекс логистических услуг по доставке грузов из Китая
+              в Украину - сборные грузы
+              и цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Украина. </h6>
             <div class="btn-row">
-              <button class="btn btn-primary">Оставить Заявку</button>
               <button class="btn btn-secondary">Подробднее</button>
             </div>
           </div>
@@ -59,23 +39,13 @@
         <div class="swiper-slide">
           <div class="card">
             <div class="img-box">
-              <img src="assets/Img/img-box-3.png" class="img-fluid" alt="img-box-1">
+              <img src="assets/Img/services-3.png" class="img-fluid" alt="img-box-1">
             </div>
-            <h4 class="card-title">Авиа</h4>
-
-            <ul class="card-option">
-              <li class="option-item"><img src="assets/Img/calendar.svg" alt="calendar">9-15 дней</li>
-              <li class="option-item"><img src="assets/Img/box.svg" alt="box">от 5 кг</li>
-            </ul>
-
-            <div class="card-price">
-              <span>от</span>
-              <b>2.5</b>
-              <span>$/кг</span>
-            </div>
-
+            <h4 class="card-title">Аренда склада</h4>
+            <h6 class="card-description">Компания - это полный комплекс логистических услуг по доставке грузов из Китая
+              в Украину - сборные грузы
+              и цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Украина. </h6>
             <div class="btn-row">
-              <button class="btn btn-primary">Оставить Заявку</button>
               <button class="btn btn-secondary">Подробднее</button>
             </div>
           </div>
