--- a/dev/templates/description.html
+++ b/dev/templates/description.html
@@ -1,14 +1,16 @@
-<!-- <section class="list">
+<section class="description">
   <div class="container">
-    <div class="template-title case-2">
-      <h2>О компании</h2>
-    </div>
+    <div class="description-row">
+      <div class="template-title case-2">
+        <h2>О компании</h2>
+      </div>
 
-    <div class="list-row">
-      <div class="list-description">
-        <p>Компания Азия Карго - это полный комплекс логистических услуг по доставке грузов из Китая в Украину - сборные
+      <div class="description-explanation">
+        <p>Компания Азия Карго - это полный комплекс логистических услуг по доставке грузов из Китая в <b>Украину</b> -
+          сборные
           грузы и
-          цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Украину. Для вашего удобства есть тарифы на
+          цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-<b>Украину</b>. Для вашего удобства есть тарифы
+          на
           лёгкий и
           тяжелый куб. Мы работаем на рынке более 4 лет, а руководители компании занимаются логистикой уже более 11 лет.
         </p>
@@ -17,11 +19,14 @@
           качественную доставку оптимальную по цене и времени! Убедитесь в этом сами!</p>
       </div>
 
-      <div class="list-image">
-        <img src="assets/Img/list.png" alt="">
-      </div>
     </div>
+
+    <div class="image-row">
+      <picture>
+        <img src="assets/Img/list.png" alt="">
+      </picture>
+    </div>
+
+
   </div>
-
-
-</section> -->
+</section>
