--- a/dev/sass/description.scss
+++ b/dev/sass/description.scss
@@ -1,29 +1,43 @@
-// .list {
-
-//   .container {
-//     position: relative;
-//   }
-
-
-//   .case-2 {
-//     font-size: 36px;
-//     font-weight: 600;
-//     line-height: 124%;
-//     margin-bottom: 16px;
-//   }
-
-//   .list-description {
-//     max-width: 555px;
-//     line-height: 170%;
-//     font-size: 18px;
-//     font-weight: 300;
-//   }
-
-//   .list-image {
-//     bottom: -106px;
-//     left: 588px;
-//     position: absolute;
-//   }
+.description {
+  .container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 
 
-// }
+  }
+}
+
+.description-row {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  .template-title {
+    margin-top: 66px;
+    padding: 0 0 44px !important;
+  }
+}
+
+
+
+
+
+.description-explanation {
+  line-height: 170%;
+  font-size: 18px;
+  font-weight: 300;
+  max-width: 555px;
+  width: 100%;
+  margin-right: 37px;
+}
+
+.image-row {
+  max-width: 550px;
+
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
