--- a/dev/sass/media/_media_max_width767.scss
+++ b/dev/sass/media/_media_max_width767.scss
@@ -1,13 +1,13 @@
 @media screen and (max-width: 861px) {
-	 .swiper-template {
-		 max-width: 360px;
-		 padding-bottom: 50px !important;
+	.swiper-template {
+		max-width: 360px;
+		padding-bottom: 50px !important;
 
-		 .swiper-navigation {
-			 max-width: 552px;
-		 }
+		.swiper-navigation {
+			max-width: 552px;
+		}
 
-	 }
+	}
 
 }
 
@@ -15,6 +15,41 @@
 	.swiper-navigation {
 		display: none !important;
 	}
+
+	.description {
+		.description-row {
+			max-width: 350px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+
+			.template-title {
+				margin-top: 0 !important;
+			}
+
+			.description-explanation {
+				margin: 0;
+				max-width: 350px;
+				width: 100%;
+				line-height: 149%;
+
+			}
+
+
+		}
+
+
+		.image-row {
+			img {
+				margin-top: 8px;
+			}
+		}
+
+
+	}
+
+
 
 
 }
