--- a/dev/sass/questions.scss
+++ b/dev/sass/questions.scss
@@ -1,95 +1,95 @@
-// .qustions {
-//   font-family: "ProximaNova";
-//   background: $bg-body;
+.qustions {
+  font-family: "ProximaNova";
+  background: $bg-body;
 
 
 
-// }
+}
 
-// .questions-row {
-//   display: flex;
+.questions-row {
+  display: flex;
 
-//   .questions-form {
-//     background-color: $form-bg;
-//     max-width: 390px;
-//     width: 100%;
-//     border-radius: 20px;
-//     color: #fff !important;
-//     padding: 39px 40px;
-//     box-shadow: 5px 15px 40px #363a4d52;
+  .questions-form {
+    background-color: $form-bg;
+    max-width: 390px;
+    width: 100%;
+    border-radius: 20px;
+    color: #fff !important;
+    padding: 39px 40px;
+    box-shadow: 5px 15px 40px #363a4d52;
 
-//     .form-column {
+    .form-column {
 
-//       flex-direction: column;
-//       display: flex;
-//       width: 100%;
+      flex-direction: column;
+      display: flex;
+      width: 100%;
 
-//       .qustions-form-title {
-//         h3 {
-//           font-size: 24px;
-//           line-height: 126%;
-//           font-weight: 600;
-//           margin-bottom: 8px;
-//         }
-//       }
+      .qustions-form-title {
+        h3 {
+          font-size: 24px;
+          line-height: 126%;
+          font-weight: 600;
+          margin-bottom: 8px;
+        }
+      }
 
-//       .questions-form-desctiprion {
-//         h4 {
-//           line-height: 126%;
-//           font-size: 17px;
-//           font-weight: 300;
-//           margin-bottom: 23px;
-//         }
-//       }
-
-
-//       .input-box {
-//         margin-bottom: 14px;
-
-//         input {
-//           width: 100%;
-//           padding: 17px 12px;
-//           border-radius: 10px;
-//           border: 2px solid transparent;
-//           font-size: 15px;
-
-//           &::placeholder {
-//             color: $input-placeholeder;
-//             font-size: 15px;
-//             font-weight: 400;
-//           }
-
-//           &:focus-visible {
-//             outline: none;
-//           }
-
-//           &:hover {
-//             border: 2px solid $primary-color;
-//             transition: 0.3s;
-//           }
-
-//           &:focus {
-//             border: 2px solid $secondary-color;
-//             transition: 0.3s;
-//           }
-
-//         }
-//       }
-//     }
-
-//     .form-button {
-//       button {
-//         width: 100%;
-//       }
-
-//       .btn-primary {
-//         img {
-//           margin-left: 95px;
-//         }
-//       }
-//     }
+      .questions-form-desctiprion {
+        h4 {
+          line-height: 126%;
+          font-size: 17px;
+          font-weight: 300;
+          margin-bottom: 23px;
+        }
+      }
 
 
+      .input-box {
+        margin-bottom: 14px;
 
-//   }
-// }
+        input {
+          width: 100%;
+          padding: 17px 12px;
+          border-radius: 10px;
+          border: 2px solid transparent;
+          font-size: 15px;
+
+          &::placeholder {
+            color: $input-placeholeder;
+            font-size: 15px;
+            font-weight: 400;
+          }
+
+          &:focus-visible {
+            outline: none;
+          }
+
+          &:hover {
+            border: 2px solid $primary-color;
+            transition: 0.3s;
+          }
+
+          &:focus {
+            border: 2px solid $secondary-color;
+            transition: 0.3s;
+          }
+
+        }
+      }
+    }
+
+    .form-button {
+      button {
+        width: 100%;
+      }
+
+      .btn-primary {
+        img {
+          margin-left: 95px;
+        }
+      }
+    }
+
+
+
+  }
+}
