--- a/dev/templates/questions.html
+++ b/dev/templates/questions.html
@@ -1,4 +1,4 @@
-<!-- <section class="questions">
+<section class="questions">
   <div class="container">
     <div class="template-title">
       <h2>Часто задаваемые вопросы</h2>
@@ -36,4 +36,4 @@
         </div>
       </form>
     </div>
-</section> -->
+</section>
