--- a/dev/style.scss
+++ b/dev/style.scss
@@ -25,3 +25,4 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "sass/services";
 @import "sass/description";
 @import "sass/questions";
+@import "sass/cooperation";
