--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -1,4 +1,3 @@
-
 * {
 	margin: 0;
 	padding: 0;
@@ -22,7 +21,6 @@ body {
 		background-color: $bg-body;
 		color: $color;
 		font-family: "ProximaNova";
-		min-height: 100vh;
 		display: flex;
 		flex-direction: column;
 
@@ -162,7 +160,8 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
 	/* display: none; <- Crashes Chrome on hover */
 	-webkit-appearance: none;
-	margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+	margin: 0;
+	/* <-- Apparently some margin are still there even though it's hidden */
 }
 
 input[type='number'] {
@@ -210,4 +209,3 @@ section {
 		background-color: #fff !important;
 	}
 }
-
