--- a/dev/templates/footer.html
+++ b/dev/templates/footer.html
@@ -1,2 +1,76 @@
-</footer>
-<a href="ul-kit.html " style="position: fixed; left: 25px; bottom: 25px;">markap</a>
+<section class="footer">
+  <footer>
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-column">
+          <div class="footer-img">
+            <a href="index.html"><img src="assets/Img/logo.svg" alt=""></a>
+          </div>
+          <div class="footer-address">
+            <address>
+              <a href="tel: 8(800)600-18-69 ">8(800)600-18-69</a>
+            </address>
+            <address>
+              <a href="mailto:  info@cargoasia.info">info@cargoasia.info</a>
+            </address>
+            <address>
+              <p>Адрес в Китае: 浙江省金华市义乌市后宅街道洪华小区5 栋一单元一楼RT789库房 高建军 电话 15966660379</p>
+
+            </address>
+
+          </div>
+          <div class="footer-icons">
+            <div class="icons-item">
+              <a href=""><img src="assets/Img/inst.png" alt="#"></a>
+            </div>
+            <div class="icons-item">
+              <a href="#"><img src="assets/Img/vk.png" alt=""></a>
+            </div>
+            <div class="icons-item">
+              <a href="#"><img src="assets/Img/telegram.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-row">
+          <nav class="nav-template">
+            <div class="nav-items">
+              <ul class="nav-list">
+                <h2 class="nav-title">Грузоперевозки</h2>
+                <li class="nav-item"><a href="#">Цены и сроки</a></li>
+                <li class="nav-item"><a href="#">Услуги</a></li>
+                <li class="nav-item"><a href="#"></a></li>
+                <li class="nav-item"><a href="#">О компании</a></li>
+                <li class="nav-item"><a href="#">Оформить груз</a></li>
+              </ul>
+            </div>
+            <div class="nav-items">
+
+              <ul class="nav-list">
+                <h2 class="nav-title">Услуги</h2>
+                <li class="nav-item"><a href="#">Выкуп товара</a></li>
+                <li class="nav-item"><a href="#">Страховка груза</a></li>
+                <li class="nav-item"><a href="#">Аренда склада</a></li>
+                <li class="nav-item"><a href="#">Перевод денежных средств</a></li>
+              </ul>
+            </div>
+            <div class="nav-items">
+              <ul class="nav-list">
+                <h2 class="nav-title">Информация</h2>
+                <li class="nav-item"><a href="#">Отзывы</a></li>
+                <li class="nav-item"><a href="#">Требования к грузу</a></li>
+                <li class="nav-item"><a href="#">Договор оферта</a></li>
+                <li class="nav-item"><a href="#">Как заключить договор</a></li>
+                <li class="nav-item"><a href="#">
+                    Способы оплаты услуг
+                  </a></li>
+                <li class="nav-item"><a href="#">Документы</a></li>
+                <li class="nav-item"><a href="#">Статьи</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <a href="ul-kit.html " style="position: fixed; left: 25px; bottom: 25px;">markap</a>
+</section>
